docs: Updated work status
added my work status and designation

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
     <h1>Hi! I am Dheeraj</h1>
+    <br>
+    <p>I work at Designed-It. Product Manager, Project Manager</p>
 </body>
 
 </html>
