update details of project

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>Hi! I am Dheeraj</h1>
     <br>
     <p>I work at Designed-It. Product Manager, Project Manager</p>
+    <p>I have worked on some cli apps</p>
 </body>
 
 </html>
