updated unwanted notes

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <br>
     <p>I work at Designed-It. Product Manager, Project Manager</p>
     <p>I have worked on some cli apps</p>
+    <p>Hula hoopa hoop</p>
 </body>
 
 </html>
