--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <p>I work at Designed-It. Product Manager, Project Manager</p>
     <p>I have worked on some cli apps</p>
     <p>Hula hoopa hoop</p>
+
+    <p>This is an exampl eof hoe to merge this branch Thta i am creating now. </p>
 </body>
 
 </html>
