--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>I have worked on some cli apps</p>
     <p>Hula hoopa hoop</p>
 
-    <p>This is an exampl eof hoe to merge this branch that i am creating now. </p>
+    <p>This is an example of how to merge this branch that i am creating now. </p>
 </body>
 
 </html>
