refactor: new lines
added few important lines

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <p>I work at Designed-It. Product Manager, Project Manager</p>
     <p>I have worked on some cli apps</p>
     <p>Hula hoopa hoop</p>
+    <p>Hoping to make things right with this piece of content on if this works then I will be committing myself to work everyday on github</p>
 </body>
 
 </html>
