--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Hi! I am Dheeraj</h1>
     <br>
     <p>I work at Designed-It. Product Manager, Project Manager</p>
-    <p>I have worked on some cli apps</p>
+    <p>I have worked on some cli apps ;)</p>
     <p>Hula hoopa hoop</p>
     <p>Hoping to make things right with this piece of content on if this works then I will be committing myself to work everyday on github</p>
 </body>
